# tree-sitter-clojure-py

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build.yml  test.yml
src/tree_sitter_clojure/: __init__.py
src/tree_sitter_clojure/native/: binding.c  parser.c
src/tree_sitter_clojure/queries/: highlights.scm
tests/: test_package.py
