[project]
name = "tree-sitter-clojure"
version = "0.1.0"
description = "Python packaging for the Clojure tree-sitter grammar"
authors = [{ name = "juliancoffee", email = "lightdarkdaughter@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["tree-sitter>=0.25.2,<0.26"]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=8.0", "ruff>=0.15.17"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tree_sitter_clojure"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
